--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.3
 blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -13,7 +14,10 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+playwright==1.49.0
+pyee==12.0.0
 requests==2.32.3
+soupsieve==2.6
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 urllib3==2.2.3
