--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.14.0
+APScheduler==3.11.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
 certifi==2024.8.30
@@ -7,12 +9,14 @@ dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.0.3
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.6
 MarkupSafe==3.0.2
 playwright==1.49.0
 pyee==12.0.0
@@ -20,6 +24,7 @@ requests==2.32.3
 soupsieve==2.6
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==2.2.3
 Werkzeug==3.1.3
 WTForms==3.2.1
