--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.1.4
 Mako==1.3.6
 MarkupSafe==3.0.2
 playwright==1.49.0
+psycopg2-binary==2.9.10
 pyee==12.0.0
 requests==2.32.3
 soupsieve==2.6
